--- a/_01_Tổng quan Spring MVC/exercise/SimpleDictionary/build.gradle
+++ b/_01_Tổng quan Spring MVC/exercise/SimpleDictionary/build.gradle
@@ -14,16 +14,16 @@ ext {
     junitVersion = '5.9.1'
 }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+sourceCompatibility = '19'
+targetCompatibility = '19'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
 dependencies {
-    compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
-
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '4.3.17.RELEASE'
+    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
